--- a/MediSecurity/appsettings.json
+++ b/MediSecurity/appsettings.json
@@ -7,6 +7,13 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=MediSecurity;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Mail": {
+    "From": "seguritymedi.0102@gmail.com",
+    "Smtp": "smtp.gmail.com",
+    "Port": 587,
+    "Password": "Zapata3096"
   }
+
 
 }
